paginação e descrições na tela de detalhes dos Pokémon, além de estilização CSS

--- a/angular.json
+++ b/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "ec1a4d37-5f82-4c97-abc6-768c6fc5e221"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
