--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "@angular/platform-browser-dynamic": "^17.3.9",
     "@angular/router": "^17.3.9",
     "@capacitor/app": "6.0.0",
-    "@capacitor/core": "6.0.0",
+    "@capacitor/filesystem": "^6.0.0",
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.0",
     "@capacitor/status-bar": "6.0.0",
     "@ionic/angular": "^8.0.0",
-    "ionicons": "^7.0.0",
+    "@ionic/storage-angular": "^4.0.0",
+    "ionicons": "^7.4.0",
     "ngx-pagination": "^6.0.3",
     "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
@@ -44,6 +45,7 @@
     "@angular/compiler-cli": "^17.0.2",
     "@angular/language-service": "^17.0.2",
     "@capacitor/cli": "6.0.0",
+    "@capacitor/core": "^6.0.0",
     "@ionic/angular-toolkit": "^11.0.1",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
