--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/status-bar": "6.0.0",
     "@ionic/angular": "^8.0.0",
     "@ionic/storage-angular": "^4.0.0",
+    "bootstrap": "^5.3.3",
     "ionicons": "^7.4.0",
     "ngx-pagination": "^6.0.3",
     "rxjs": "^7.8.1",
